# ps

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
.obsidian/: appearance.json  workspace.json
BOJ/: 12345.md
boj/: 1181.cpp  test.cpp
solved/: test.cpp
study/: hello.cpp
